--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>kz.Application</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
